--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,11 @@
             <div class="hero-content">
                 <h1>Hi, My name is <span class="purple">Swapnil</span></h1>
                 <p>and I'm a passionate <span id="element"></span></p>
+                <div class="resume">
+                <form action="https://drive.google.com/file/d/1cFopzhDHOR4m4PLehhwJgPYlw2qHmWgF/view?usp=sharing">
+                    <button class="resume-button">Resume</button>
+                </form>
+            </div>
             </div>
             <div class="hero-image">
                 <img src="pg.png" alt="Swapnil's Profile Picture">
@@ -93,6 +98,17 @@
                 </div>
                 <div class="project-image">
                     <img src="project.jpeg" alt="WonderLust Project Screenshot">
+                </div>
+            </div>
+             <div class="project-item">
+                <div class="project-details">
+                    <h3>Toamato</h3>
+                    <p>A full-stack, responsive, and secure food delivery application built using the MERN (MongoDB, Express, React, Node.js) stack.
+This project demonstrates a real-world, production-ready food ordering platform with features like secure authentication, dynamic cart management, live order tracking, and Stripe payment integration.</p>
+                    <a href="https://food-del-frontend-60wy.onrender.com/" target="_blank" class="project-link">View Project</a>
+                </div>
+                <div class="project-image">
+                    <img src="tomato.png" alt="WonderLust Project Screenshot">
                 </div>
             </div>
             </section>
